# pulse

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VISION.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/shell/: Cargo.toml  tauri.conf.json
apps/desktop/shell/capabilities/: default.json
apps/desktop/shell/icons/: icon.icns
apps/desktop/shell/src/: bridge.rs  commands.rs  lib.rs  main.rs  state.rs  tray.rs
apps/desktop/ui/: index.html
apps/desktop/ui/src/: App.tsx
apps/desktop/ui/src/components/: ErrorBoundary.tsx  IntegrationCard.tsx  IntegrationsPanel.tsx  PulseLogo.tsx  ToastHost.tsx  TrayBar.tsx
apps/desktop/ui/src/components/integrations/: JiraDetail.tsx
apps/desktop/ui/src/hooks/: useActiveTask.ts  useDashboard.ts  useSettings.ts  useTheme.ts
apps/desktop/ui/src/lib/: tauri.ts
apps/desktop/ui/src/screens/: DashboardScreen.tsx  OnboardingScreen.tsx  PopoverScreen.tsx  SettingsScreen.tsx
apps/desktop/ui/src/styles/: globals.css
crates/attribution/: Cargo.toml
crates/attribution/src/: lib.rs
crates/attribution/src/providers/: cwd.rs  git.rs  mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential.rs  error.rs  lib.rs  loopback.rs  method.rs  oauth.rs  token.rs
crates/auth/src/providers/: atlassian.rs  github.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  pricing.rs  state.rs  storage.rs  time.rs  turn.rs
crates/enrichment/: Cargo.toml
crates/enrichment/src/: daemon.rs  error.rs  lib.rs  registry.rs  trait_def.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/ingest/src/providers/: claude_code.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: error.rs  lib.rs  manifest.rs  plugin.rs  registry.rs  status.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: ingest_loop.rs  lib.rs  scan.rs
docs/: architecture.md  install.md  jira-setup.md  oauth.md  platform.md  plugins.md  watcher.md
extensions/: README.md
extensions/jira/: Cargo.toml
extensions/jira/src/: client.rs  enricher.rs  lib.rs  plugin.rs
