[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/desktop/shell",
    "extensions/*",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.77"
license      = "MIT"
authors      = ["Pulse contributors"]
repository   = "https://github.com/pulse-bar/pulse"

[workspace.dependencies]
pulse-core        = { path = "crates/core" }
pulse-auth        = { path = "crates/auth" }
pulse-attribution = { path = "crates/attribution" }
pulse-ingest      = { path = "crates/ingest" }
pulse-watcher     = { path = "crates/watcher" }
pulse-enrichment  = { path = "crates/enrichment" }
pulse-plugins     = { path = "crates/plugins" }
pulse-ext-jira    = { path = "extensions/jira" }
async-trait       = "0.1"

anyhow         = "1"
chrono         = { version = "0.4", features = ["serde"] }
dirs           = "5"
notify         = "6"
notify-debouncer-full = "0.3"
once_cell      = "1"
parking_lot    = "0.12"
r2d2           = "0.8"
r2d2_sqlite    = "0.25"
regex          = "1"
rusqlite       = { version = "0.32", features = ["bundled", "chrono"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
tokio          = { version = "1", features = ["full"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
