[package]
name        = "pulse-auth"
description = "Auth abstraction for Pulse — keychain-backed credentials, OAuth2 with PKCE, future GitHub Apps."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
async-trait = { workspace = true }
chrono      = { workspace = true }
keyring     = "3"
parking_lot = { workspace = true }
rand        = "0.8"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = "0.10"
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
url         = "2"
