[package]
name        = "pulse-core"
description = "Domain types, parsing primitives, and SQLite storage for Pulse."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[dependencies]
anyhow      = { workspace = true }
chrono      = { workspace = true }
parking_lot = { workspace = true }
r2d2        = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
