[package]
name        = "pulse-ingest"
description = "Ingest providers — adapters that convert raw transcripts to ParsedTurn."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
pulse-core  = { workspace = true }
chrono      = { workspace = true }
dirs        = { workspace = true }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
