[package]
name        = "pulse-desktop"
description = "Tauri shell — windows, tray, IPC. All logic lives in the pulse-* crates."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name       = "pulse_desktop"
path       = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pulse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pulse-core        = { workspace = true }
pulse-attribution = { workspace = true }
pulse-ingest      = { workspace = true }
pulse-watcher     = { workspace = true }

tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell           = "2"
tauri-plugin-notification    = "2"
tauri-plugin-autostart       = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os              = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-opener          = "2"

anyhow      = { workspace = true }
chrono      = { workspace = true }
dirs        = { workspace = true }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
